welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: ';' expected but 'else' found.
else recule()
^SlugTracking:16: error: Unmatched closing brace '}' ignored here
}
^